# Terminal

./: .gitignore  README.md  index.html  manifest.json
algo/: .env.example  .gitignore  README.md  pyproject.toml
algo/config/: breakout_4h.yaml  daily.yaml  default.yaml  live.yaml  portfolio.yaml  ratio.yaml
algo/reports/: max_return_demo.json  portfolio_analysis.json  risk_frontier.json  risk_frontier_4h.json  strategy_comparison.json  summary_20260722_2350.json  summary_20260723_0009.json  summary_20260723_0011.json  summary_20260723_0053.json
algo/scripts/: compare_strategies.py  fetch_extra.py  ig_order_smoke.py  optimize_max_return.py  portfolio_analysis.py  risk_frontier.py
algo/src/goldsilver/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
algo/src/goldsilver/data/: __init__.py  cleaning.py  fetch_dukascopy.py  loader.py  (+1 more)
algo/tests/: conftest.py  live_fakes.py  test_costs.py  test_engine_sl_tp.py  test_live_engine_cycle.py  test_live_ig_broker.py  test_live_killswitch.py  test_live_paper_broker.py  test_live_regime.py  test_live_risk_cap.py  test_metrics.py  test_new_strategies_and_exit_signal.py  test_pipeline_integration.py  test_price_action_strategies.py  test_sizing.py  test_timeframes_no_lookahead.py
backtester/: .gitignore  README.md  pyproject.toml
backtester/configs/: backtest.yaml  eth_okx.yaml
backtester/scripts/: make_sample_data.py
backtester/src/quantbt/: __init__.py  __main__.py  cli.py  config.py
backtester/tests/: conftest.py  test_data.py  test_engine.py  test_metrics.py  test_report.py  test_validation.py
(+114 files in other folders)
