[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldsilver"
version = "0.1.0"
description = "Backtest & validation anti-overfitting pour un algo de trading XAU/USD + XAG/USD"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.20",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
goldsilver = "goldsilver.cli:main"
goldsilver-live = "goldsilver.live.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
