[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantbt"
version = "0.1.0"
description = "Backtesting & anti-overfitting validation framework (XAG/USD, ETH, day/swing)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
crypto = ["ccxt>=4.0"]
dev = ["pytest>=7.4"]

[project.scripts]
quantbt = "quantbt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
